# Encryption_course

./: Attack.cpp  Attack.h  CMakeLists.txt  KEYS.cpp  KEYS.h  Node.h  first algorithm.txt  main.cpp
Lab 1/Matrix_09_MAR_2022/: CMakeLists.txt  main.cpp  mat_test.cpp  mat_test.h  matrix.cpp  matrix.h
Lab 3/: RFS_code.rar
Lab 3/RFS_code/: CMakeLists.txt  RFS.cbp  RFS.cpp  RFS.depend  RFS.h  School.cpp  School.db  School.h  Student.cpp  Student.h  main.cpp  record.cpp  record.h
Lab 3/RFS_code/include/: School.h
Lab 3/RFS_code/src/: School.cpp
Lab2/Lab2_Polynomial/Lab2_code/: main.cpp  node.h  poly_test.cpp  poly_test.h  polynomial.cpp  polynomial.h
Lab2/lab2_code/: CMakeLists.txt  main.cpp  node.h  poly_test.cpp  poly_test.h  polynomial.cpp  polynomial.h
LogiSim/: control prom  proccessor.circ
RC4/: CMakeLists.txt  eslam.cpp  main.cpp  stream_project.h
hillcipher/: CMakeLists.txt  eslam.cpp  hillcypher.h  main.cpp  matrix.cpp
hillcipher/.ccls-cache/@@home@eslam@Downloads@Faculty@crypto@alogrithms/: @usr@include@c++@9@bits@memoryfwd.h.blob  @usr@include@c++@9@bits@postypes.h.blob  @usr@include@c++@9@bits@stringfwd.h.blob  @usr@include@c++@9@cwchar.blob  @usr@include@c++@9@iosfwd.blob  @usr@include@features.h.blob  @usr@include@stdc-predef.h.blob  @usr@include@wchar.h.blob  @usr@include@x86_64-linux-gnu@bits@floatn-common.h.blob  (+20 more)
hillcypher/: CMakeLists.txt  hillcypher.h  hillcyphyer.cpp
key_expansion/: CMakeLists.txt  Key.h  aziz.cpp  eslam.cpp  main.cpp  rady.cpp
monoalphabetic-substitution/: Attack.h  CMakeLists.txt  main.cpp
(+2 files in other folders)
